# Cloud-data-filter-python-typescript

./: Makefile  README.md  docker-compose.yml
.github/workflows/: main.yml
cloud-api/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
cloud-api/apis/: config.py  main.py  routes.py
cloud-api/apis/common/: dataprovider.py  exceptions.py  userdataprovider.py
cloud-api/apis/dtos/: cloud_filters_dto.py  cloud_list_dto.py  user_dtos.py
cloud-api/apis/models/: cloud_filters.py  cloud_list.py
cloud-api/apis/views/: cloud_filters.py  cloud_list.py  clouds.py
cloud-api/tests/: fixtures.py  test_cloud_list.py  test_cloud_list_model.py  test_cloud_list_view.py  test_dataprovider.py
cloud-app/: .eslintrc.js  .prettierrc.js  Dockerfile  package-lock.json  package.json
cloud-app/src/: App.tsx  config.tsx  index.css  types.ts
cloud-app/src/common/: Checkbox.tsx  Select.tsx
cloud-app/src/components/: CloudFilter.tsx  CloudList.css  CloudList.tsx
cloud-app/src/hooks/: useCloudFilters.tsx  useCloudListHook.tsx
cloud-app/src/routed-pages/: CloudListPage.tsx  routedPage.css
cloud-app/src/utils/: Utils.tsx
