[tool.poetry]
name = "apis"
version = "0.1.0"
description = "Aiven Interview Take Home Task"
authors = ["Towfiq <towfiqomi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
starlette = "^0.16.0"
pydantic = "^1.8.2"
pytest = "^6.2.5"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
